--- a/src/components/styles/TechSelect.module.css
+++ b/src/components/styles/TechSelect.module.css
@@ -16,7 +16,7 @@
 .techLogoContainers {
   overflow: visible;
   position: relative;
-  padding: 0.5em;
+  padding: 0.1em;
   background: none;
 }
 
